--- a/styles/global.css
+++ b/styles/global.css
@@ -20,6 +20,12 @@ button:focus+#dropdown-options {
     display: block;
 }
 
+.form-error-message {
+    color: #ef4444;
+    font-size: 12px;
+    font-weight: 400;
+}
+
 .size-\[20px\] {
     width: 30px;
     height: 30px;
